# hello-world

./: .editorconfig  .gitignore  .pre-commit-config.yaml copy  README.md  Taskfile.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.tasks/: fastapi.yml
src/hello_world/: __init__.py
src/hello_world/app/: __main__.py
src/hello_world/app/v1/: config.py
src/hello_world/cli/: __main__.py  cli.py  config.py  hello.py
src/hello_world/cli/commands/: hello.py
src/hello_world/core/: config.py
tests/: conftest.py
tests/bdd/features/: say_hello.feature
tests/bdd/steps/: test_say_hello_steps.py
tests/unit/: test_cli_unit.py
